--- a/financasmf/app/templates/theme3/layout.html
+++ b/financasmf/app/templates/theme3/layout.html
@@ -143,11 +143,11 @@
       </div><!-- /.content-wrapper -->
       <footer class="main-footer">
         <div class="pull-right hidden-xs">
-          <a href="https://whatsfacil.com/Sis_Financas" target="_blank">Suporte</a>          
+          <!--<a href="https://whatsfacil.com/Sis_Financas" target="_blank">Suporte</a-->          
         </div>
       
         <b>{LONGNAMEAPP}</b>  (Versão {VERSIONAPP})<br>
-        <a href="https://blsistemas.ml" target="_blank">Copyright © 2020 BLSistemas - Todos os direitos reservados</a>
+        <a href="https://www.sleyersx.com.br" target="_blank">Copyright © 2021 SLEYERSX - Todos os direitos reservados</a>
       </footer>
 
       <!-- Add the sidebar's background. This div must be placed
